# igrepper

./: .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  index.md
benches/: keypress.rs
igrepper/: igrepper.py
python/: Pipfile  README.md  setup.py
python/igrepper/: __init__.py
python/test/: test_igrepper.py
python/test/samples/: longlines  shortlines
src/: file_reading.rs  lib.rs  main.rs
src/igrepper/: constants.rs  core.rs  mod.rs  output_generator.rs  rendering.rs  source_lines.rs  state.rs  trimming.rs  types.rs
test/: runtest
test/samples/: simple
tests/snapshots/: core.snapshot.json
