[package]
name = "igrepper"
version = "1.3.4"
authors = ["Gustav Larsson <gustav.e.larsson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The interactive grepper"


[dependencies]
ncurses = "5.101.0"
libc = "0.2.93"
clap = "2.33.3"
regex = "1.5"
inotify = "0.10"
anyhow = "1.0.81"

[dev-dependencies]
serde = "1.0.123"
serde_json = "1.0.62"
pretty_assertions = "0.6.1"
