[package]
name = "igrepper"
version = "1.3.6"
authors = ["Gustav Larsson <gustav.e.larsson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The interactive grepper"
homepage = "https://igrepper.org"
repository = "https://github.com/igoyak/igrepper"


[dependencies]
ncurses = "5.101.0"
libc = "0.2.93"
clap = "4.5.39"
regex = "1.11.1"
inotify = "0.11.0"
anyhow = "1.0.98"

[dev-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
pretty_assertions = "1.4.1"
